# owa-cal

./: .env.sample  .gitignore  AGENTS.md  README.md  SECURITY.md  cal-cli.zsh  pyproject.toml
Formula/: cal-cli.rb
cal_cli/: __init__.py  __main__.py  api.py  auth.py  cli.py  config.py  dates.py  events.py  format.py
owa_cal/: __init__.py  auth.py  cli.py  config.py  events.py  format.py  ics.py  profiles.py
scripts/: add-to-path.sh  export-cookies.py
tests/: conftest.py  test_auth.py  test_cli_extra.py  test_cli_smoke.py  test_cli_validation.py  test_config.py  test_dates.py  test_events.py  test_format.py  test_ics.py  test_profiles.py  test_webcal_cli.py
tests/fixtures/: sample.ics
