[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cal-cli"
version = "0.1.0"
description = "Pipe-friendly calendar CLI for Outlook / Microsoft 365"
requires-python = ">=3.8"

[project.scripts]
cal-cli = "cal_cli:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["cal_cli"]
