[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "owa-cal"
version = "0.6.1"
description = "Pipe-friendly calendar CLI for Outlook / Microsoft 365"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Carl Joakim Damsleth" }]
dependencies = ["owa-piggy>=0.6.0"]
keywords = [
  "outlook",
  "microsoft-365",
  "calendar",
  "cli",
  "json",
  "graph",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Scheduling",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/damsleth/owa-cal"
Repository = "https://github.com/damsleth/owa-cal"
Issues = "https://github.com/damsleth/owa-cal/issues"
Changelog = "https://github.com/damsleth/owa-cal/releases"

[project.scripts]
owa-cal = "owa_cal:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["owa_cal"]
